tests/NormalTests/paczka1/small_fuzzy/59401666.err
Error in line 4: GJuuqaM6 S684 77,0
Error in line 9: GJuuqaM6 A358 9,4
Error in line 1: OuyFP8n1qJ A358 56,4
Error in line 12: OuyFP8n1qJ S849 67,6
Error in line 14: OuyFP8n1qJ S684 -1,3
